[package]
name = "ashmaize_py"
version = "0.1.0"
edition = "2021"

[lib]
name = "ashmaize_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module"] }
hex = "0.4"
rayon = "1.11.0"
rand = "0.8"

[dependencies.ashmaize]
path = "ce-ashmaize"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
